--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,14 @@ on:
   pull_request:
     types:
       - opened
-    workflow_dispatch:
+  workflow_dispatch:
+  push:
+      branches:
+        - master
+        - 'dev-*'
+        - 'feat-*'
+      paths-ignore:
+        - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
